--- a/train_idrid.ipynb
+++ b/train_idrid.ipynb
@@ -89,6 +89,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualize sample ground truths"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -141,6 +148,13 @@
     "    image = dataset_train.load_image(image_id)\n",
     "    mask, class_ids = dataset_train.load_mask(image_id)\n",
     "    visualize.display_top_masks(image, mask, class_ids, dataset_train.class_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train model"
    ]
   },
   {
@@ -1071,7 +1085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
